--- a/examples/example2/index.html
+++ b/examples/example2/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="application/javascript" src="dictionary.js"></script>
-    <script type="application/javascript" src="src/wordfilter.js"></script>
+    <script type="application/javascript" src="../../EN-dictionary-example.js"></script>
+    <script type="application/javascript" src="../../src/wordfilter.js"></script>
 </head>
 <body>
 <input onkeyup="key_handler(this.value)">
